--- a/docker/backend/config/site.conf
+++ b/docker/backend/config/site.conf
@@ -8,8 +8,9 @@ server {
 		index index.php index.html index.htm;
 
     location / {
-         try_files $uri $uri/ /index.php$is_args$args;
-    }
+         # try_files $uri $uri/ /index.php$is_args$args;
+				rewrite ^/.*$ /index.php last;
+		}
 		
     location ~ \.php$ {
         try_files $uri /index.php =404;
@@ -22,6 +23,43 @@ server {
         fastcgi_read_timeout 600;
         include fastcgi_params;
     }
+
+		# Whitelist
+		## Let October handle if static file not exists
+		location ~ ^/favicon\.ico { try_files $uri /index.php; }
+		location ~ ^/sitemap\.xml { try_files $uri /index.php; }
+		location ~ ^/robots\.txt { try_files $uri /index.php; }
+		location ~ ^/humans\.txt { try_files $uri /index.php; }
+		
+		## Let nginx return 404 if static file not exists
+		location ~ ^/storage/app/uploads/public { try_files $uri 404; }
+		location ~ ^/storage/app/media { try_files $uri 404; }
+		location ~ ^/storage/temp/public { try_files $uri 404; }
+		
+		location ~ ^/modules/.*/assets { try_files $uri 404; }
+		location ~ ^/modules/.*/resources { try_files $uri 404; }
+		location ~ ^/modules/.*/behaviors/.*/assets { try_files $uri 404; }
+		location ~ ^/modules/.*/behaviors/.*/resources { try_files $uri 404; }
+		location ~ ^/modules/.*/widgets/.*/assets { try_files $uri 404; }
+		location ~ ^/modules/.*/widgets/.*/resources { try_files $uri 404; }
+		location ~ ^/modules/.*/formwidgets/.*/assets { try_files $uri 404; }
+		location ~ ^/modules/.*/formwidgets/.*/resources { try_files $uri 404; }
+		location ~ ^/modules/.*/reportwidgets/.*/assets { try_files $uri 404; }
+		location ~ ^/modules/.*/reportwidgets/.*/resources { try_files $uri 404; }
+		
+		location ~ ^/plugins/.*/.*/assets { try_files $uri 404; }
+		location ~ ^/plugins/.*/.*/resources { try_files $uri 404; }
+		location ~ ^/plugins/.*/.*/behaviors/.*/assets { try_files $uri 404; }
+		location ~ ^/plugins/.*/.*/behaviors/.*/resources { try_files $uri 404; }
+		location ~ ^/plugins/.*/.*/reportwidgets/.*/assets { try_files $uri 404; }
+		location ~ ^/plugins/.*/.*/reportwidgets/.*/resources { try_files $uri 404; }
+		location ~ ^/plugins/.*/.*/formwidgets/.*/assets { try_files $uri 404; }
+		location ~ ^/plugins/.*/.*/formwidgets/.*/resources { try_files $uri 404; }
+		location ~ ^/plugins/.*/.*/widgets/.*/assets { try_files $uri 404; }
+		location ~ ^/plugins/.*/.*/widgets/.*/resources { try_files $uri 404; }
+		
+		location ~ ^/themes/.*/assets { try_files $uri 404; }
+		location ~ ^/themes/.*/resources { try_files $uri 404; }
 
     location ~ /\.ht {
         deny all;
