--- a/src/composer.json
+++ b/src/composer.json
@@ -40,7 +40,10 @@
         "october/cms": "~1.0",
         "laravel/framework": "~5.5.40",
         "wikimedia/composer-merge-plugin": "1.4.1",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "rainlab/translate-plugin": "^1.7",
+        "rainlab/builder-plugin": "^1.0",
+        "rainlab/blog-plugin": "^1.4"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.7",
