--- a/src/composer.json
+++ b/src/composer.json
@@ -5,6 +5,12 @@
     "type": "project",
     "keywords": ["october", "cms", "octobercms", "laravel"],
     "license": "MIT",
+	  "repositories": [
+	  	{
+	  		"type": "vcs",
+	  		"url": "https://github.com/panakour/oc-backup-plugin"
+	  	}
+	  ],
     "authors": [
         {
             "name": "Alexey Bobkov",
@@ -31,7 +37,7 @@
         "source": "https://github.com/octobercms/october"
     },
     "require": {
-        "php": ">=7.0.8",
+        "php": ">=7.1",
         "ext-mbstring": "*",
         "ext-openssl": "*",
         "october/rain": "~1.0",
@@ -43,7 +49,8 @@
         "predis/predis": "^1.1",
         "rainlab/translate-plugin": "^1.7",
         "rainlab/builder-plugin": "^1.0",
-        "rainlab/blog-plugin": "^1.4"
+        "rainlab/blog-plugin": "^1.4",
+        "panakour/oc-backup-plugin": "dev-master"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.7",
@@ -75,7 +82,7 @@
     "config": {
         "preferred-install": "dist",
         "platform": {
-            "php": "7.0.8"
+            "php": "7.4.8"
         }
     },
     "minimum-stability": "dev",
