--- a/src/composer.json
+++ b/src/composer.json
@@ -37,7 +37,7 @@
         "source": "https://github.com/octobercms/october"
     },
     "require": {
-        "php": ">=7.1",
+        "php": ">=7.0.8",
         "ext-mbstring": "*",
         "ext-openssl": "*",
         "october/rain": "~1.0",
@@ -49,8 +49,7 @@
         "predis/predis": "^1.1",
         "rainlab/translate-plugin": "^1.7",
         "rainlab/builder-plugin": "^1.0",
-        "rainlab/blog-plugin": "^1.4",
-        "panakour/oc-backup-plugin": "dev-master"
+        "rainlab/blog-plugin": "^1.4"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.7",
@@ -82,7 +81,7 @@
     "config": {
         "preferred-install": "dist",
         "platform": {
-            "php": "7.4.8"
+            "php": "7.0.8"
         }
     },
     "minimum-stability": "dev",
