--- a/src/.gitignore
+++ b/src/.gitignore
@@ -20,7 +20,9 @@ package-lock.json
 /node_modules
 _ide_helper.php
 
-plugins*
+plugins/*
+public/plugins*
+!plugins/ilcscience
 
 # for netbeans
 nbproject
