--- a/src/plugins/ilcscience/portfolio/updates/version.yaml
+++ b/src/plugins/ilcscience/portfolio/updates/version.yaml
@@ -15,3 +15,9 @@
 1.0.6:
     - 'Updated table ilcscience_portfolio_projects'
     - builder_table_update_ilcscience_portfolio_projects_4.php
+1.0.7:
+    - 'Updated table ilcscience_portfolio_projects'
+    - builder_table_update_ilcscience_portfolio_projects_5.php
+1.0.8:
+    - 'Updated table ilcscience_portfolio_projects'
+    - builder_table_update_ilcscience_portfolio_projects_6.php
