--- a/src/themes/mikus-blog/package.json
+++ b/src/themes/mikus-blog/package.json
@@ -16,15 +16,16 @@
 		"author": "",
 		"license": "MIT",
 		"devDependencies": {
-				"cross-env": "^7.0.1",
+				"@tailwindcss/custom-forms": "^0.2",
+				"@tailwindcss/typography": "^0.2.0",
 				"alpinejs": "^2.0",
+				"cross-env": "^7.0.1",
 				"laravel-mix": "^5.0.1",
 				"laravel-mix-tailwind": "^0.1.0",
 				"resolve-url-loader": "^3.1.0",
 				"sass": "^1.15.2",
 				"sass-loader": "^8.0.0",
 				"tailwindcss": "^1.4.6",
-				"vue-template-compiler": "^2.6.11",
-				"@tailwindcss/custom-forms": "^0.2"
+				"vue-template-compiler": "^2.6.11"
 		}
 }
