--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -18,8 +18,8 @@ services:
       args:
         - UID=${BACKEND_UID}
         - GID=${BACKEND_GID}
-    ports:
-      - "${BIND_ADDRESS}:1234:8080"
+    # ports:
+      # - "${BIND_ADDRESS}:1234:8080"
     volumes:
       - ../src:/var/www/html
     networks:
