--- a/docker/backend/config/site.conf
+++ b/docker/backend/config/site.conf
@@ -65,10 +65,15 @@ server {
         deny all;
     }
 
-    location /.well-known/acme-challenge/ {
-        root /var/www/letsencrypt/;
-        log_not_found off;
+		location ^~ /.well-known/acme-challenge/ {
+         allow all; 
+         root /var/www/letsencrypt;
     }
+
+		### Hide /acme-challenge subdirectory and return 404 on all requests.
+		location = /.well-known/acme-challenge/ {
+			return 404;
+		}
 
     error_log /var/log/nginx/laravel_error.log;
     access_log /var/log/nginx/laravel_access.log;
